Kubernetes/local-dev-argocd-traefik-k8s/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  ingressClassName: traefik
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: express-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vite-frontend
            port:
              number: 5173
